ActionItem65: fixing layout bugs

--- a/public/designs/organization/templates/default/stylesheets/button.css
+++ b/public/designs/organization/templates/default/stylesheets/button.css
@@ -1,7 +1,15 @@
-.button {
+.auto_complete{
+  background-color: red;
+}
+
+.subtitle .button,
+.list_item_button .button,
+.display_info_options .button,
+.content_menu .button,
+.search_itens .button{
+  display: block;
   float: left;
   border: none;
-  display: block;
   opacity: 0.6;
   margin-left: 5px;
   width: 24px;
@@ -11,6 +19,17 @@
   background-position: 50% 50%;
 }
 
+.content_menu .button {
+  border: none;
+  opacity: 0.6;
+  width: 48px;
+  height: 48px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+/*
 .button_main{
   float: none;
   border: 2px solid black;
@@ -22,17 +41,7 @@
   background-repeat: no-repeat;
   background-position: 0%;
 }
-
-.with_text.edit_small,
-.with_text.go-jump,
-.with_text.system-log-out{
-  float: none;
-  display: inline;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: 100% 100%;
-  margin: 10px;
-}
+*/
 
 .bt_small {
   width: 16px;
@@ -49,17 +58,19 @@
 
 .list_item_button .button { width: 16px; height: 16px }
 
+/*
 .with_text {
   padding: 3px 0px;
   padding-left: 24px;
   background-position: 0px 50%;
   width: inherit !important;
   display: inline !important;
-}
+}*/
 
+/*
 .button_main.with_text {
   display: block !important;
-}
+}*/
 
 .bt_small.with_text {
   padding-left: 18px;
