--- a/public/designs/organization/templates/default/stylesheets/menu_content.css
+++ b/public/designs/organization/templates/default/stylesheets/menu_content.css
@@ -14,13 +14,3 @@
   padding: 0px;
 }
 
-.content_menu .button {
-  border: none;
-  display: block;
-  opacity: 0.6;
-  width: 48px;
-  height: 48px;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
